# PyRegexGen

./: .gitignore  LICENSE  README.md  palindrome_pairs.py  pyproject.toml  setup.py
PyRegexGen/: trie.py  trienode.py
PyRegexGen/utils/: processing.py  search.py
pyregexgen/: main.py  trie.py
pyregexgen/utils/: processing.py  search.py
src/: main.py
src/tests/: test_search.py
src/trie/: trie.py
src/utils/: search.py
tests/: test_search.py
