[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyRegexGen"
version = "0.0.1"
authors = [
  { name="LaPiova", email="schrodinghauer@gmail.com" },
]
description = "A trie generator and search tool"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/LaPiova/PyRegexGen"
"Bug Tracker" = "https://github.com/LaPiova/PyRegexGen/issues"